2023-03-21T21:14:54.087Z |           1.12.3 | fix
2023-03-21T21:31:52.633Z |           1.12.4 |
2023-04-10T10:46:17.376Z |           1.12.5 | update-version fix
2023-05-27T17:50:06.523Z |           1.13.0 | create-favicons
2023-05-27T17:53:56.680Z |           1.13.1 | fix
2023-05-29T10:15:31.419Z |           1.14.0 | create-favicon: init option
2023-05-29T10:31:21.507Z |           1.15.0 | create-favicons: multi set
2023-05-29T10:38:09.535Z |           1.15.1 | fix create-favicon shebang
2023-05-29T10:42:50.764Z |           1.15.2 | fix
2023-05-29T13:05:01.999Z |           1.15.3 | fix
2023-05-29T13:39:40.036Z |           1.15.4 | create-favicons fix
2023-05-29T14:31:22.411Z |           1.16.0 | create-favicons: opzione `null` per snippet file
2023-05-29T18:31:40.550Z |           1.16.1 | upd
2023-05-30T09:17:02.151Z |           1.16.2 | Create-favicons: personalizzazione parametri output
2023-05-30T10:20:45.158Z |           1.16.3 | create-favicons: defaults update
2023-05-30T10:40:19.709Z |           1.16.4 | create-favicons: fix messaggio finale
2023-05-31T17:45:07.365Z |           1.17.0 | layout-tools
2023-06-01T08:13:25.815Z |           1.17.1 | create-favicons: rimozione homedir dai path presenti nei messaggi
2023-06-14T13:50:33.895Z |           1.17.2 | layout-tools fix
2023-07-12T08:48:16.358Z |           1.18.0 | create-Favicons: parametro per la personalizzazione della qualità dei file PNG
2023-07-12T14:59:09.227Z |           1.18.1 | docs fix
2023-09-17T15:14:01.301Z |           1.19.0 | favicon: new `snippet_target_file` parameter
2023-11-28T16:11:16.637Z |           1.20.0 | Layout tools position
2023-11-28T16:25:28.443Z |           1.20.1 | fix
2023-12-05T16:49:55.238Z |           1.20.2 | layout tool position upd
2024-01-14T16:43:18.388Z |           1.21.0 | dev-inst
2024-01-15T14:34:14.374Z |           1.21.1 | Upd
2024-01-16T11:01:25.386Z |           1.21.2 | Fix