@@ -58,3 +58,4 @@
 2024-01-14T16:43:18.388Z |           1.21.0 | dev-inst
 2024-01-15T14:34:14.374Z |           1.21.1 | Upd
 2024-01-16T11:01:25.386Z |           1.21.2 | Fix
+2024-01-25T14:03:42.670Z |           1.22.0 | UpdateVersion: json files
